[package]
name = "obsidian_to_influx"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "1.1.2"
influxdb = { version = "0.5.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
yaml-front-matter = "0.1.0"
chrono = "0.4.19"
tokio = { version = "1", features = ["full"] }