[package]
name = "obsidian_to_influx"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4"
influxdb = { version = "0.7", features = ["derive"] }
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2.3"
yaml-front-matter = "0.1.0"
